Fix overflow.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -74,6 +74,7 @@ body {
 // ***** Text *****
 
 .text {
+
     display: flex;
     flex-direction: column;
     justify-content:space-around;
@@ -131,7 +132,7 @@ body {
     }
 }
 
-@media screen and (min-width: 1350px) {
+@media screen and (min-width: 1200px) {
 
     .page-container {
         width: 82%;
@@ -141,11 +142,10 @@ body {
 
     .navbar {
         margin: 0;
-        max-width: 500px;
+        max-width: 40%;
         position: absolute;
         top: 20px;
         left: 0px;
-
     }
 
     .recipes {
@@ -179,5 +179,12 @@ body {
         bottom: 80px;
         left: 0px;
         color: colours.$main;
+    }
+}
+
+@media (min-width: 650px) and (max-height: 820px) {
+    
+    .img {
+        max-width: 400px;
     }
 }
